# internal/models/db/client.go
@@ -1,0 +1,13 @@
+package db
+
+import (
+	"gorm.io/gorm"
+)
+
+type Client struct {
+	gorm.Model
+	PhoneNumber        string
+	MobileOperatorCode string
+	Tag                string
+	Timezone           string
+}
